2000-09-22  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* i386-linux-nat.c (OLD_CANNOT_FETCH_REGISTER,
	OLD_CANNOT_FETCH_REGISTER):  New definitions for accessible registers
	when accessing the registers via the U area.
	(fetch_register, store_register):  Use them.
	(cannot_fetch_register, cannot_store_register):  New functions,
	all registers should be accessible if we have GETREGS support.
	* config/i386/nm-linux.h:  Use cannot_fetch/store_register for
	CANNOT_FETCH/STORE_REGISTER definitions.

2000-09-06  Fred Fish  <fnf@cygnus.com>

	* infttrace.c (update_thread_state_after_attach): Pass address
	of ttstate_t object, not the object itself.

2000-09-18  Mark Kettenis  <kettenis@gnu.org>

	* lin-lwp.c (stop_wait_callback): Remove bogus assertions in the
	code that deals with exiting/signalled threads.  Replace with
	code similar to what's done in lin_lwp_wait.

2000-09-17  Kevin Buettner  <kevinb@redhat.com>

	* ppc-linux-nat.c (fill_gregset, fill_fpregset): New functions.
	* config/powerpc/linux.mh (NATDEPFILES): Remove linux-thread.o.
	Add proc-service.o, thread-db.o, and lin-lwp.o.
	(LOADLIBES): Define.
	* config/powerpc/nm-linux.h (ATTACH_DETACH, SVR4_SHARED_LIBS):
	Remove defines which are already present in ../nm-linux.h.
	(solib.h): Don't include this file; it's already included by
	../nm-linux.h.
	(PREPARE_TO_PROCEED, GET_THREAD_SIGNALS, ATTACH_LWP): Define
	to use the following lin-lwp.c functions...
	(lin_lwp_prepare_to_proceed, lin_thread_get_thread_signals,
	lin_lwp_attach_lwp): Declare.

2000-09-17  Kevin Buettner  <kevinb@redhat.com>

	* m88k-nat.c (fetch_inferior_registers): Protoize.
	* m88k-tdep.c (m88k_skip_prologue): Protoize.

2000-09-15  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	* varobj.c (varobj_set_value): Call wrapped version of
	parse_exp_1() to avoid longjumps.

2000-09-15  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	* remote.c (putpkt_binary): Call read_frame, not getpkt. Log message.